Large cleanup due to the move from org.jetbrains.annotations.Nullable to org.jspecify.Nullable